--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "darryl-erby-momentum--website-09022025-v6",
+  "name": "darryl-erby---cv-site-0917",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
